# TokenPal

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  SETUP.md  config.default.toml  install.ps1  install.sh  pyproject.toml  run.ps1  run.sh  setup_tokenpal.py
docs/: agents-and-tools.md  amd-dgpu-setup.md  commentary-gate.md  dev-setup-linux.md  dev-setup-macos.md  dev-setup-windows-amd-desktop.md  dev-setup-windows-amd.md  dev-setup-windows-intel.md  dynamic-mood-transitions.md  fine-tuning-plan.md  idle-tool-rolls.md  observation-enrichment.md  qt-frontend.md  remote-training-guide.md  research-architecture.md  server-setup.md  textual-overlay-plan.md  voice-training.md
docs/agents/: backlog.md  domain.md  triage-labels.md
docs/claude/: actions.md  audio.md  brain.md  llm.md  senses.md  server.md  slash-commands.md  ui.md  voice.md
plans/: aero-retro.md  app-enricher.md  ascii-art-grounding.md  ascii-art-phase3.md  buddy-utility-wedges.md  clamp-o.md  client-server-comms.md  commentary-finetune.md  configurable-data-dir.md  conversation-history-ui.md  cross-session-callbacks.md  custom-moods.md  eventkit-meeting-detection.md  fix-brain-farts.md  fix-it-felix.md  fling-me.md  future-features.md  gpu-scaling-stub.md  gpu-scaling.md  grand-plan-resume.md  hot-off-presses.md  idle-loop-variety.md  idle-observations.md  idle-tool-rolls-m3.md  idle-tool-rolls.md  installation-overhaul.md  interesting-plus-plus-bcdf.md  interesting-plus-plus.md  let-me-click-shit.md  master-sprite.md  mouse-joint.md  moveo-it.md  new-ui-new-me.md  next-batch-end-user.md  next-batch-engineer.md  next-batch-master.md  next-batch-ml.md  next-batch-personality.md  next-batch-ux.md  nl-command-triggers.md  (+28 more)
plans/brainstorm/: ascii-art-llm-expert.md  ascii-art-master.md  ascii-art-retro-artist.md  ascii-art-superfan.md  senses-tools-end-user.md  senses-tools-engineer.md  senses-tools-master.md  senses-tools-ml.md  senses-tools-personality.md  senses-tools-privacy.md
plans/shipped/: ascii-art-phase2.md  be-brave.md  claude-api-research-synth.md  cloud-native-web-search.md  color-me.md  conversation-context.md  copy-it.md  divide-n-conquer.md  dont-forget.md  environment-sense.md  fix-bored-and-freeform.md  font-ain-of-youth.md  get-physical.md  gpu-scaling.md  hot-off-presses.md  icant-read.md  idle-tool-rolls.md  interesting-plus-plus-bcdf.md  llamacpp-direct-amd-dgpu.md  mouse-joint.md  npu-buddy-exploration.md  pal-improvement-grand-plan.md  pipeline-hardening.md  plan-skill-v2.md  plan-skill.md  qt-it-quick-migration.md  reactplus.md  research-refinement.md  research-source-upgrade.md  serve-it.md  size-me-up.md  smarter-buddy.md  smoke-test-delete-me.md  swing-it.md  text-input-slash-commands.md  textual-improvements.md  voice-generation-hardening.md  voice-persona-master.md  weather-report.md  wedge-unification.md  (+1 more)
scripts/: amd-hip-swap.ps1  bootstrap.ps1  bootstrap.sh  download-model.ps1  install-hooks.sh  install-linux.sh  install-macos.sh  install-server.ps1  install-server.sh  install-windows.ps1  live_refine_test.py  run-tokenpal.ps1  run-tokenpal.sh  smoke_target_latency.py  start-server.bat  verify_followup_live.py
tests/: _helpers.py  conftest.py  test_agent.py  test_app_voice.py  test_ascii_zones.py  test_audio_writer.py  test_buddy_environment.py  test_buddy_rescue.py  test_cloud_backend.py  test_cloud_command.py  test_cloud_modal.py  test_cloud_secrets.py  test_commands.py  test_consent.py  test_first_run.py  test_invoker.py  test_max_tokens_auto_probe.py  test_model_command_backend.py  test_nl_commands.py  test_options_modal.py  test_overlay_resolve_fallback.py  test_per_server_models.py  test_qt_bubble_follow.py  test_qt_chat_window_colors.py  test_qt_cloud_voice_dialogs.py  test_qt_dock_follow.py  test_qt_edge_dock.py  test_qt_markup.py  test_qt_modals.py  test_qt_options_dialog.py  test_qt_overlay.py  test_qt_physics.py  test_qt_platform.py  test_qt_set_zoom.py  test_qt_shell.py  test_qt_slash_dispatch.py  test_qt_weather.py  test_research.py  test_research_cache.py  test_research_planner.py  (+14 more)
tests/manual/: quick_backend_smoke.py  quick_buddy.py  quick_followers.py  quick_spike.py  ruler_scroll.py
tests/test_actions/: test_base.py  test_catalog.py  test_config.py  test_do_math.py  test_git_actions.py  test_grep_codebase.py  test_list_processes.py  test_memory_query.py  test_open_app.py  test_read_file.py  test_registry.py  test_system_info.py  test_timer.py
tests/test_audio/: test_asr.py  test_deps.py  test_input_pipeline.py  test_kokoro_backend.py  test_models_install.py  test_modularity.py  test_registry.py  (+5 more)
tokenpal/: __main__.py  app.py  cli.py  commands.py  first_run.py  nl_commands.py
(+306 files in other folders)
