[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpal"
version = "0.1.0"
description = "Cross-platform AI desktop buddy powered by local LLMs"
requires-python = ">=3.12"
dependencies = [
    "psutil>=5.9",
    "pynput>=1.7",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "textual>=0.85",
]

[project.optional-dependencies]
macos = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]
windows = [
    "pywin32>=306",
]
nvidia = [
    "pynvml>=11.5",
]
mlx = [
    "mlx>=0.16",
    "mlx-lm>=0.16",
]
training = [
    "unsloth>=2024.12",
    "trl>=0.12",
    "transformers>=4.46,<4.57.2",  # 4.57.2 breaks local model paths (dict config type error)
    "datasets>=3.0",
    "bitsandbytes>=0.44",
    "accelerate>=1.0",
    "peft>=0.13",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
]

[project.scripts]
tokenpal = "tokenpal.app:main"
tokenpal-finetune = "tokenpal.tools.finetune_voice:main"
tokenpal-server = "tokenpal.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenpal*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
