[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpal"
version = "0.1.0"
description = "Cross-platform AI desktop buddy powered by local LLMs"
requires-python = ">=3.12"
dependencies = [
    "psutil>=5.9",
    "pynput>=1.7",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "textual>=0.85",
    "watchdog>=4.0",
    "pint>=0.23",
    "astral>=3.2",
    "aiohttp>=3.9",
    "trafilatura>=2.0",
    "readability-lxml>=0.8.1",
    "newspaper4k>=0.9",
    "anthropic>=0.45",
]

[project.optional-dependencies]
macos = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]
windows = [
    "pywin32>=306",
]
nvidia = [
    "pynvml>=11.5",
]
mlx = [
    "mlx>=0.16",
    "mlx-lm>=0.16",
]
training = [
    "unsloth>=2024.12",
    "trl>=0.12",
    "transformers>=4.46,<4.57.2",  # 4.57.2 breaks local model paths (dict config type error)
    "datasets>=3.0",
    "bitsandbytes>=0.44",
    "accelerate>=1.0",
    "peft>=0.13",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
desktop = [
    "PySide6>=6.9",
]
audio = [
    # Kokoro ONNX TTS — pulls onnxruntime + numpy transitively.
    "kokoro-onnx>=0.4",
    # PortAudio bindings for mic capture + playback. Wheel ships PortAudio
    # inside on macOS / Windows / x86_64 Linux; aarch64 Linux needs
    # portaudio19-dev.
    "sounddevice>=0.4",
    # Wake-word (input side). Onnxruntime already in via kokoro-onnx.
    # Shared melspectrogram + embedding + per-wakeword .onnx files are
    # fetched via openwakeword.utils.download_models() — install_models()
    # handles that out-of-band so the wheel stays small.
    "openwakeword>=0.6",
    # ASR (input side). Pulls ctranslate2 (CPU + CUDA both supported); no
    # ffmpeg system dep — pyav handles decode.
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "aioresponses>=0.7",
]

[project.scripts]
tokenpal = "tokenpal.app:main"
tokenpal-finetune = "tokenpal.tools.finetune_voice:main"
tokenpal-server = "tokenpal.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenpal*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Qt subclasses must use camelCase method names to override Qt APIs
# (paintEvent, mousePressEvent, etc.). Same exception applies to Qt /
# Cocoa mocks in Qt-adjacent test files.
"tokenpal/ui/qt/*.py" = ["N802"]
"tests/test_qt_platform.py" = ["N802"]
# Embeds bash + PowerShell installer scripts as triple-quoted strings;
# their lines are bound by shell syntax, not Python's 100-char line limit.
"tokenpal/tools/remote_train.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
